[gd_scene load_steps=6 format=3 uid="uid://cesaqd0a15cko"]

[ext_resource type="Texture2D" uid="uid://bkdlb24upx1s4" path="res://assets/Kirara_Submachine.png" id="1_jh6py"]
[ext_resource type="Script" path="res://weapons/machine_g.gd" id="1_xx2ya"]
[ext_resource type="Script" path="res://weapons/bulletdamage.gd" id="2_yynr0"]
[ext_resource type="AudioStream" uid="uid://bg55vd1i0im00" path="res://audio/Gunshot.mp3" id="4_1hba6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i78uc"]
radius = 23.6008

[node name="machine_g" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_xx2ya")

[node name="guntimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_i78uc")
disabled = true

[node name="weaponP_machineg" type="Marker2D" parent="."]

[node name="bulspawn" type="Marker2D" parent="weaponP_machineg"]
unique_name_in_owner = true
position = Vector2(143.211, 1.06127)
scale = Vector2(0.28896, 0.267157)
script = ExtResource("2_yynr0")

[node name="sprite_machinegun" type="Sprite2D" parent="weaponP_machineg"]
unique_name_in_owner = true
position = Vector2(99, 4)
scale = Vector2(0.28896, 0.267157)
texture = ExtResource("1_jh6py")
region_enabled = true
region_rect = Rect2(3097, 3353, 376, 153)

[node name="channel2" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_1hba6")
volume_db = -10.285

[connection signal="timeout" from="guntimer" to="." method="_on_guntimer_timeout"]
